@@ -147,7 +147,7 @@ table and replace <b>american</b> with the appropriate language string.</p>
 </tr>
 <tr><td>US English</td><td>american</td></tr>
 <tr><td>Arabic</td><td>arabic</td></tr>
-<tr><td>Brazilian Portugese</td><td>"brazilian portugese"</td></tr>
+<tr><td>Brazilian Portugese</td><td>"brazilian portuguese"</td></tr>
 <tr><td>Canadian French</td><td>frc</td></tr>
 <tr><td>Czech</td><td>czech</td></tr>
 <tr><td>Danish</td><td>danish</td></tr>
